# repopilot

./: .gitignore  AGENTS.md  CLAUDE.md  DECISIONS.md  Makefile  PROGRESS.md  README.md  pyproject.toml
.claude/: settings.local.json
docs/: QUALITY.md  REPORT.md  SPRINT_CONTRACT.md  architecture.md  code_review.md  evaluation.md  features.json  security.md
harness/: validate.py
scripts/: check.py  lint.py  repopilot.py
src/repopilot/: __init__.py  __main__.py  cli.py  config.py  issue_fetchers.py  issue_intake.py  main.py  models.py  repair_workflow.py  repo_analysis.py  state_machine.py
src/repopilot/agents/: __init__.py  contracts.py  prompts.py
src/repopilot/api/: __init__.py  app.py  schemas.py
src/repopilot/approvals/: __init__.py  policy.py
src/repopilot/artifacts/: __init__.py  writer.py
src/repopilot/evaluation/: __init__.py  contracts.py
src/repopilot/github/: __init__.py  client.py
src/repopilot/observability/: __init__.py  events.py
src/repopilot/retrieval/: __init__.py  contracts.py
src/repopilot/runs/: __init__.py  manager.py
src/repopilot/tools/: __init__.py  (+7 more)
tests/: __init__.py  test_bootstrap.py  test_issue_intake.py  test_repair_workflow.py  test_repo_analysis.py
tests/integration/: test_api_health.py
tests/unit/: test_a02_layered_architecture.py  test_api.py  test_architecture_contracts.py  test_artifacts.py  test_cli.py  test_evaluation.py  test_f04_approval_boundaries.py  test_f05_sandbox_execution_planning.py  test_f06_subprocess_sandbox.py  test_observability.py  test_run_manager.py  test_security.py  test_workspace.py
(+18 files in other folders)
