[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "repopilot"
version = "0.1.0"
description = "AI programmer assistant for issue-driven repository repair workflows."
readme = "AGENTS.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "pydantic>=2",
    "pydantic-settings>=2",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "mypy>=1.10",
    "pytest>=8",
    "ruff>=0.5",
]

[project.scripts]
repopilot = "repopilot.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
strict_equality = true
